--- a/assets/css/style-menu.css
+++ b/assets/css/style-menu.css
@@ -1,3 +1,9 @@
+#main-nav-menu {
+    --bs-navbar-color: var(--main-color) !important;
+    --bs-navbar-hover-color: var(--bs-link-color)!important;
+    --bs-navbar-active-color: var(--bs-link-color)!important;
+}
+
 #main-nav-menu a {
     text-transform: uppercase;
 }
@@ -22,9 +28,8 @@
     transition: 0.6s;
 }
 
-.navbar-dark .navbar-brand,
-.navbar-dark .navbar-nav .nav-link {
-    color: var(--main-color)!important;
+.navbar-brand,
+.navbar-nav .nav-link {
     transition: 0.6s;
     margin: 0 15px;
 }
@@ -34,6 +39,7 @@
     #main-menu ul {
         background-color: var(--main-color);
         border-radius: 0.5em;
+        padding: 0.5em 1em;
     }
 
     .navbar-dark .navbar-brand,
