* img для списка

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,42 +113,40 @@ header object {
     box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
+.h-list-style {
+    --h-list-style-background-size: 30px;
+    --h-list-style-img-1: url("../img/site/pancel-1.svg");
+    --h-list-style-img-2: url("../img/site/pancel-2.svg");
+    word-wrap: break-word;
+}
+
 .h-list-style li {
     /* padding-left: 30px; */
     padding: 5px 0 5px 30px;
     margin: 0;
     list-style: none !important;
-    /*background-image: url("../img/site/h-list-style-1-new.svg");*/
+    background-image: var(--h-list-style-img-1);
     background-repeat: no-repeat;
     background-position: left center;
-    background-size: 20px;
+    background-size: var(--h-list-style-background-size);
     transition: 1s;
+}
+
+.h-list-style li:hover {
+    padding-left: 40px;
+    background-image: var(--h-list-style-img-2);
+    background-size: var(--h-list-style-background-size);
 }
 
 .h-list-style li a {
     text-decoration: none !important;
-    color: #0f5132 !important;
-}
-
-.h-list-style li:hover {
-    /*transition: linear 1s;*/
-    padding-left: 40px;
-    margin: 0;
-    list-style: none;
-    /*background-image: url("../img/site/h-list-style-2-new.svg");*/
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-size: 20px;
+    color: var(--main-color) !important;
 }
 
 .h-list-style .widget_nav_menu li.current-menu-item {
     padding-left: 40px;
-    margin: 0;
-    list-style: none;
-    /*background-image: url("../img/site/h-list-style-2-new.svg");*/
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-size: 20px;
+    background-image: var(--h-list-style-img-2);
+    background-size: var(--h-list-style-background-size);
 }
 
 .h-list-style ul {
