--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,11 +87,47 @@ header object {
 }
 
 .main-content .block {
-    background-color: #fff;
-    min-height: 100px;
+    padding: 1em;
+    position: relative;
+    z-index: 0;
     border-radius: 10px;
     box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
-    padding: 1em;
+    overflow: hidden;
+    background-color: #FFFFFF;
+}
+
+.main-content .block::before {
+    content: '';
+    position: absolute;
+    z-index: -2;
+    left: -15%;
+    top: -200%;
+    width: 130%;
+    height: 500%;
+    background-color: #BFE2FF;
+    background-repeat: no-repeat;
+    background-size: 50% 50%, 50% 50%;
+    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+    background-image: linear-gradient(var(--bs-link-hover-color), var(--bs-link-hover-color)), linear-gradient(var(--bs-link-color), var(--bs-link-color)), linear-gradient(var(--bs-link-hover-color), var(--bs-link-hover-color)), linear-gradient(var(--bs-link-color), var(--bs-link-color));
+    animation: anim-ramka-5 45s linear infinite;
+}
+
+.main-content .block::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 6px;
+    top: 6px;
+    width: calc(100% - 12px);
+    height: calc(100% - 12px);
+    background: white;
+    border-radius: 5px;
+}
+
+@keyframes anim-ramka-5 {
+    100% {
+        transform: rotate(1turn);
+    }
 }
 
 /** Изменение стилей WP - расстояния между колонками */
@@ -144,7 +180,6 @@ header object {
 
 .h-list-style li a {
     text-decoration: none !important;
-    color: var(--main-color) !important;
 }
 
 .h-list-style .widget_nav_menu li.current-menu-item {
