--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 @font-face {
-font-family: "kzcooper";
-src: url("../fonts/kzcooper.ttf") format("truetype");
+    font-family: "kzcooper";
+    src: url("../fonts/kzcooper.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
@@ -17,8 +18,8 @@ src: url("../fonts/kzcooper.ttf") format("truetype");
 
 .accordion {
     --bs-accordion-btn-color: var(--main-color);
-    --bs-accordion-btn-icon:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23055e09'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-    --bs-accordion-btn-active-icon:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23055e09'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23055e09'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23055e09'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
     --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgb(54, 93, 41, 0.25);
     --bs-accordion-active-color: var(--main-color);
     --bs-accordion-active-bg: var(--main-color-bg);
@@ -100,16 +101,21 @@ header object {
     content: '';
     position: absolute;
     z-index: -2;
-    left: -15%;
-    top: -200%;
-    width: 130%;
-    height: 500%;
-    background-color: #BFE2FF;
-    background-repeat: no-repeat;
-    background-size: 50% 50%, 50% 50%;
-    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
-    background-image: linear-gradient(var(--bs-link-hover-color), var(--bs-link-hover-color)), linear-gradient(var(--bs-link-color), var(--bs-link-color)), linear-gradient(var(--bs-link-hover-color), var(--bs-link-hover-color)), linear-gradient(var(--bs-link-color), var(--bs-link-color));
-    animation: anim-ramka-5 45s linear infinite;
+    left: -100%;
+    top: -100%;
+    width: 300%;
+    height: 300%;
+    background: linear-gradient(
+            120deg,
+            var(--bs-link-hover-color) 25%,
+            var(--bs-link-color) 25%,
+            var(--bs-link-color) 50%,
+            var(--bs-link-hover-color) 50%,
+            var(--bs-link-hover-color) 75%,
+            var(--bs-link-color) 75%
+    );
+    background-size: 200% 200%;
+    animation: anim-ramka-mono 45s linear infinite;
 }
 
 .main-content .block::after {
@@ -124,15 +130,18 @@ header object {
     border-radius: 5px;
 }
 
-@keyframes anim-ramka-5 {
+@keyframes anim-ramka-mono {
+    0% {
+        background-position: 0 0;
+    }
     100% {
-        transform: rotate(1turn);
+        background-position: 100% 100%;
     }
 }
 
 /** Изменение стилей WP - расстояния между колонками */
 .wp-block-columns.is-layout-flex {
-    gap: 1em;!important;
+    gap: 1em; !important;
 }
 
 .main-content .block-news {
